--- a/package.json
+++ b/package.json
@@ -13,7 +13,13 @@
     "@radix-ui/react-slot": "^1.1.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "got": "^14.4.4",
     "lucide-react": "^0.460.0",
+    "metascraper": "^5.45.25",
+    "metascraper-description": "^5.45.25",
+    "metascraper-image": "^5.45.25",
+    "metascraper-title": "^5.45.25",
+    "metascraper-url": "^5.45.25",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.28.0",
