--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "metascraper-url": "^5.45.25",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.3.0",
     "react-router-dom": "^6.28.0",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7"
