--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -40,6 +40,12 @@ jobs:
         restore-keys: |
           ${{ runner.os }}-pnpm-store-
 
-    - run: pnpm install --frozen-lockfile
-    - run: pnpm run build --if-present
-    - run: pnpm test
+    # Changed from --frozen-lockfile to allow installation without lock file
+    - name: Install dependencies
+      run: pnpm install
+
+    - name: Build
+      run: pnpm run build --if-present
+      
+    - name: Test
+      run: pnpm test
