--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -6,6 +6,13 @@ on:
   pull_request:
     branches: [ "main" ]
 
+# Add permissions
+permissions:
+  contents: read
+  pages: write
+  id-token: write
+
+# Configure Pages
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -45,3 +52,19 @@ jobs:
 
     - name: Build
       run: pnpm run build
+
+    - name: Upload artifact
+      uses: actions/upload-pages-artifact@v3
+      with:
+        path: ./dist
+
+  deploy:
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v2
