--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -6,20 +6,18 @@ on:
   pull_request:
     branches: [ "main" ]
 
-# Add permissions
 permissions:
   contents: read
   pages: write
   id-token: write
 
-# Configure Pages
 jobs:
   build:
     runs-on: ubuntu-latest
 
     strategy:
       matrix:
-        node-version: [18.x, 20.x, 22.x]
+        node-version: [18.x]  # Simplified to single version to avoid artifact conflicts
 
     steps:
     - uses: actions/checkout@v4
@@ -57,6 +55,7 @@ jobs:
       uses: actions/upload-pages-artifact@v3
       with:
         path: ./dist
+        name: github-pages-${{ github.run_id }}
 
   deploy:
     environment:
