Add debug step for dist directory in GitHub Actions workflow

--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -59,11 +59,13 @@ jobs:
     - name: Build
       run: pnpm run build
 
+    - name: Debug dist directory
+      run: ls -la dist
+
     - name: Upload artifact
       uses: actions/upload-pages-artifact@v3
       with:
         path: dist
-        name: github-pages
 
   deploy:
     needs: build
@@ -75,5 +77,3 @@ jobs:
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v2
-        with:
-          artifact_name: github-pages
