Refactor GitHub Actions workflow and Vite configuration for improved deployment

--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -20,26 +20,23 @@ jobs:
   build:
     runs-on: ubuntu-latest
 
-    strategy:
-      matrix:
-        node-version: [18.x]
-
     steps:
     - uses: actions/checkout@v4
     
     - name: Setup Pages
       uses: actions/configure-pages@v4
     
-    - name: Use Node.js ${{ matrix.node-version }}
+    - name: Use Node.js
       uses: actions/setup-node@v4
       with:
-        node-version: ${{ matrix.node-version }}
+        node-version: '18.x'
     
     - name: Install pnpm
       uses: pnpm/action-setup@v2
       with:
         version: 8
-    
+        run_install: false
+
     - name: Get pnpm store directory
       shell: bash
       run: |
@@ -54,25 +51,28 @@ jobs:
           ${{ runner.os }}-pnpm-store-
 
     - name: Install dependencies
-      run: pnpm install
+      run: pnpm install --frozen-lockfile
 
     - name: Build
-      run: pnpm run build
-
-    - name: Debug dist directory
-      run: ls -la dist
+      env:
+        BASE_URL: '/${{ github.event.repository.name }}/'
+      run: |
+        pnpm run build
+        touch dist/.nojekyll
 
     - name: Upload artifact
       uses: actions/upload-pages-artifact@v3
       with:
-        path: dist
+        path: ./dist
 
   deploy:
     needs: build
     runs-on: ubuntu-latest
+    
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
+      
     steps:
       - name: Deploy to GitHub Pages
         id: deployment
